# DysLearnia

./: .env.example  .gitignore  README.md  create_repo.py  docker-compose.dev.yml  output.txt  quiz_output.txt  requirements.txt  run.sh
.claude/: master-prompt.md  settings.local.json
backend/: .env  .env.example  README.md  __init__.py  app.py  main.py  pyproject.toml  requirements.txt  result.txt  test_ocr.py
backend/agents/: audio_agent.py  gamification.py  gamification_agent.py  guard_rail_agent.py  hint.py  hint_agent.py  ocr_agent.py  orchestrator.py  quiz.py  quiz_agent.py  simplifier.py  text_simplifier.py
backend/api/: routes.py  schemas.py
backend/blocks/: __init__.py  base.py  registry.py
backend/blocks/inputs/: course_input.py
backend/blocks/output/unifiers/: audio_unifier.py  pdf_unifier.py  pptx_unifier.py  video_unifier.py
backend/blocks/transform/: dyslexia_font.py  flashcards.py  gamification.py  gap_detector.py  infographic.py  key_concepts.py  knowledge_graph.py  quiz_builder.py  simplified_text.py  summarizer.py  tts_block.py
backend/core/: graph.py  pipeline.py  state.py
backend/db/: neo4j.py  qdrant.py  supabase.py
backend/engine/: events.py  runner.py  validator.py
backend/mixins/: rag_mixin.py
backend/models/: local_llm.py
backend/routes/: blocks.py  documents.py  flows.py  pipeline.py
backend/scripts/: migrate_supabase.py
backend/tests/: conftest.py  test_blocks_base.py  test_dyslexia_font.py  test_infographic.py  test_neo4j_integration.py  test_pdf.py  test_pipeline_file_endpoint.py  test_qdrant_integration.py  test_rag_mixin.py  test_routes.py  test_routes_api.py  test_runner.py  test_validator.py
backend/utils/: audio.py  embeddings.py  pdf.py  speech_input.py
dyslearnia-front/: FRONTEND.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json
(+35 files in other folders)
